# pylibbpf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py  wrappers.py
.github/workflows/: conda.yml  format.yml  pip.yml  wheels.yml
examples/: execve.py
pylibbpf/: __init__.py  ir_to_ctypes.py  wrappers.py
src/: main.cpp
src/bindings/: main.cpp
src/core/: bpf_exception.h  bpf_map.cpp  bpf_map.h  bpf_object.cpp  bpf_object.h  bpf_perf_buffer.cpp  bpf_perf_buffer.h  bpf_program.cpp  bpf_program.h
src/maps/: bpf_perf_buffer.cpp  perf_event_array.cpp  perf_event_array.h
src/utils/: struct_parser.cpp  struct_parser.h
tests/: test_basic.py
